Bug 72481 - Backport of SVGEdit and ApiSVGProxy extensions into MW 1.14.1

--- a/extensions/SVGEdit/svg-edit/svg-editor.html
+++ b/extensions/SVGEdit/svg-edit/svg-editor.html
@@ -24,8 +24,7 @@
 <!-- See http://code.google.com/p/svg-edit/wiki/ConfigOptions for configuration options -->
 
 <!-- you can load extensions here -->
-<!-- <script type="text/javascript" src="extensions/ext-helloworld.js"></script> -->
-
+<script type="text/javascript" src="extensions/ext-mediawiki.js"></script>
 
 <!-- Development version of script tags: 
 <script type="text/javascript" src="jquery.js"></script>
