--- a/extensions/S5SlideShow/slide.htm
+++ b/extensions/S5SlideShow/slide.htm
@@ -24,6 +24,7 @@
 var slideshowId = [pageid];
 var s5ScaleEachSlide = [scaled];
 //--></script>
+<script src="extensions/S5SlideShow/contentScale.js" type="text/javascript"></script>
 <script src="extensions/S5SlideShow/slides.js" type="text/javascript"></script>
 <style type="text/css">
 [addcss]
@@ -36,18 +37,12 @@ var s5ScaleEachSlide = [scaled];
 <div id="currentSlide"><!-- DO NOT EDIT --></div>
 <div id="header"></div>
 <div id="footer">
-<h1>[footer]</h1>
+<h1>[footer]&nbsp;</h1>
 <h2>[subfooter]</h2>
 </div>
 </div>
 
 <div class="presentation">
-
-<div class="slide">
-<h1 style="margin-top: 0">[title]</h1>
-<div class="slidecontent"><h1 style="margin-top: 0"><span style="font-size: 60%">[subtitle]</span></h1>
-<h3>[author]</h3></div>
-</div>
 
 [content]
 
