--- a/extensions/S5SlideShow/slide.htm
+++ b/extensions/S5SlideShow/slide.htm
@@ -13,6 +13,7 @@
 <meta name="defaultView" content="slideshow" />
 <meta name="controlVis" content="hidden" />
 <!-- mediawiki style sheet -->
+<link rel="stylesheet" rev="stylesheet" href="skins/common/shared.css" type="text/css" media="projection,screen" />
 <link rel="stylesheet" rev="stylesheet" href="extensions/S5SlideShow/wiki-s5.css" type="text/css" media="projection,screen" />
 <!-- style sheet links -->
 <link rel="stylesheet" type="text/css" href="index.php?action=slide&s5skin=[style]&s5css=1" media="projection" id="slideProj" />
